# git-homeworksV2

CleanCode1/: CleanCode1.cpp  CleanCode1.sln  CleanCode1.vcxproj  CleanCode1.vcxproj.filters  data.json  page.html  text.txt
ClientManager/: .gitignore  CMakeLists.txt  ClientManager.cpp  ClientManager.h  main.cpp
DatabaseHW/: .gitignore  DatabaseHW.cpp  DatabaseHW.vcxproj
Funktor1/: Funktor1.cpp  Funktor1.sln  Funktor1.vcxproj  Funktor1.vcxproj.filters
Funktor2/: Funktor2.cpp  Funktor2.sln  Funktor2.vcxproj  Funktor2.vcxproj.filters
Funktori2/: Funktori2.cpp  Funktori2.sln  Funktori2.vcxproj  Funktori2.vcxproj.filters
Funktori3/: Funktori3.cpp  Funktori3.sln  Funktori3.vcxproj  Funktori3.vcxproj.filters
MoveSemantika1/: .gitignore  MoveSemantika1.cpp  MoveSemantika1.sln  MoveSemantika1.vcxproj  MoveSemantika1.vcxproj.filters
MoveSemantika2/: MoveSemantika2.cpp  MoveSemantika2.sln  MoveSemantika2.vcxproj  MoveSemantika2.vcxproj.filters
PodKapotom1/: PodKapotom1.cpp  PodKapotom1.sln  PodKapotom1.vcxproj  PodKapotom1.vcxproj.filters
STL1/: STL1.cpp  STL1.sln  STL1.vcxproj  STL1.vcxproj.filters
STL2/: STL2.cpp  STL2.sln  STL2.vcxproj
STL2_1/: STL2_1.cpp  STL2_1.sln  STL2_1.vcxproj  STL2_1.vcxproj.filters
STL2_2/: STL2_2.cpp  STL2_2.sln  STL2_2.vcxproj  STL2_2.vcxproj.filters
STL3/: STL3.cpp  STL3.sln  STL3.vcxproj  STL3.vcxproj.filters
SmartPointers1/: SmartPointers1.cpp  SmartPointers1.sln  SmartPointers1.vcxproj  SmartPointers1.vcxproj.filters
SmartPointers2/: SmartPointers2.cpp  SmartPointers2.sln  SmartPointers2.vcxproj  (+1 more)
(+85 files in other folders)
